# flask_blog_tutorial_without_copy

./: README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  test_db.py
